 - Added VFS.GetLoadedArchives() -> { string archiveName1, string archiveName2 ... }
 - Added VFS.GetArchivePath(string archiveName1) -> string archivePathOnDisk
 - Added VFS.GetFileAbsolutePath(string vfsFilePath) -> string filePathOnDisk
 - Added VFS.GetArchiveContainingFile(string vfsFilePath) -> string archiveName
 - add a 6th return value (feature->reclaimTime) to GetFeatureResources.
 - Add `Spring.UnitFinishCommand(unitID)`, finishes current command. Unlike CMD.REMOVE it works with Repeat/UnitCmdDone
   and unlike CommandFallback it works on builtin engine commands. 
 - Allow spawning of any CEG from any LUS:
   EmitSfx(p, "cegTag") param will emit the CEG with tag="cegTag"
   EmitSfx(p, SFX.GLOBAL | cegID) will emit the CEG with id=cegID
   Added Spring.GetCEGID("cegTag") to get CEG id from tag
 - Added Spring.GetUnitCurrentCommand(unitID [, cmdIndex]) -> [cmdID, cmdOpts (coded), cmdTag[, cmdParam1[, cmdParam2 ... ]]]
   Returns the index-th command in the unit's queue (or nil). Note: cmdOpts are represented by a single number
   (usually a table otherwise), and params are returned on the stack as well. This function allocates no tables.
 ! make Spring.Get{Unit,Factory}Commands always expect a second argument
 ! Spring.GetTeamInfo: switched the last two return values around (incomeMultiplier is now 7th, customKeys is now 8th)
 - Added a second boolean parameter to Spring.Get{Player,Team}Info, if it is false the function will not return
   the (now) last return value, the customKeys table (allocation optimisation)
 ! Spring.GetUnit{Armored,IsActive} now works on enemies in LoS
 ! Spring.GetUnitMass no longer works on enemies outside of LoS
 ! remove Spring.{Set,Get}UnitTravel
 ! remove Spring.SetUnitToFeature (use the AllowFeatureCreation callin to block features from being spawned)
 - Added a boolean parameter to Spring.GetCameraState, if set to false it will return the current camera name
   and then the following camera-specific values on the stack: